attached_assets/Pasted--src-greenlet-greenlet-greenlet-hpp-143-9-error-PyCFram_1770531102002.txt
   src/greenlet/greenlet_greenlet.hpp:143:9: error: ‘_PyCFrame’ does not name a type; did you mean ‘_frame’?
        143 |         _PyCFrame* cframe;
            |         ^~~~~~~~~
            |         _frame
      src/greenlet/greenlet_greenlet.hpp:170:29: error: ‘_PyCFrame’ has not been declared
        170 |         void set_new_cframe(_PyCFrame& frame) G_NOEXCEPT;
            |                             ^~~~~~~~~
      src/greenlet/greenlet_greenlet.hpp: In constructor ‘greenlet::PythonState::PythonState()’:
      src/greenlet/greenlet_greenlet.hpp:748:6: error: class ‘greenlet::PythonState’ does not have any field named ‘cframe’
        748 |     ,cframe(nullptr)
            |      ^~~~~~
      src/greenlet/greenlet_greenlet.hpp:810:11: error: ‘class greenlet::PythonState’ has no member named ‘cframe’
        810 |     this->cframe = &PyThreadState_GET()->root_cframe;
            |           ^~~~~~
      src/greenlet/greenlet_greenlet.hpp:810:42: error: ‘PyThreadState’ {aka ‘struct _ts’} has no member named ‘root_cframe’
        810 |     this->cframe = &PyThreadState_GET()->root_cframe;
            |                                          ^~~~~~~~~~~
      src/greenlet/greenlet_greenlet.hpp: In member function ‘void greenlet::PythonState::operator<<(const PyThreadState*)’:
      src/greenlet/greenlet_greenlet.hpp:830:11: error: ‘class greenlet::PythonState’ has no member named ‘cframe’
        830 |     this->cframe = tstate->cframe;
            |           ^~~~~~
      src/greenlet/greenlet_greenlet.hpp:830:28: error: ‘const PyThreadState’ {aka ‘const struct _ts’} has no member named ‘cframe’
        830 |     this->cframe = tstate->cframe;
            |                            ^~~~~~
      src/greenlet/greenlet_greenlet.hpp:831:33: error: ‘const PyThreadState’ {aka ‘const struct _ts’} has no member named ‘cframe’
        831 |     this->use_tracing = tstate->cframe->use_tracing;
            |                                 ^~~~~~
      src/greenlet/greenlet_greenlet.hpp:834:37: error: ‘const PyThreadState’ {aka ‘const struct _ts’} has no member named ‘recursion_limit’; did you mean ‘py_recursion_limit’?
        834 |     this->recursion_depth = tstate->recursion_limit - tstate->recursion_remaining;
            |                                     ^~~~~~~~~~~~~~~
            |                                     py_recursion_limit
      src/greenlet/greenlet_greenlet.hpp:834:63: error: ‘const PyThreadState’ {aka ‘const struct _ts’} has no member named ‘recursion_remaining’; did you mean ‘c_recursion_remaining’?
        834 |     this->recursion_depth = tstate->recursion_limit - tstate->recursion_remaining;
            |                                                               ^~~~~~~~~~~~~~~~~~~
            |                                                               c_recursion_remaining
      src/greenlet/greenlet_greenlet.hpp:835:35: error: ‘const PyThreadState’ {aka ‘const struct _ts’} has no member named ‘cframe’
        835 |     this->current_frame = tstate->cframe->current_frame;
            |                                   ^~~~~~
      src/greenlet/greenlet_greenlet.hpp:848:42: error: ‘const PyThreadState’ {aka ‘const struct _ts’} has no member named ‘trash_delete_nesting’
        848 |     this->trash_delete_nesting = tstate->trash_delete_nesting;
            |                                          ^~~~~~~~~~~~~~~~~~~~
      src/greenlet/greenlet_greenlet.hpp: In member function ‘void greenlet::PythonState::operator>>(PyThreadState*)’:
      src/greenlet/greenlet_greenlet.hpp:860:13: error: ‘PyThreadState’ {aka ‘struct _ts’} has no member named ‘cframe’
        860 |     tstate->cframe = this->cframe;
            |             ^~~~~~
      src/greenlet/greenlet_greenlet.hpp:860:28: error: ‘class greenlet::PythonState’ has no member named ‘cframe’
        860 |     tstate->cframe = this->cframe;
            |                            ^~~~~~
      src/greenlet/greenlet_greenlet.hpp:867:13: error: ‘PyThreadState’ {aka ‘struct _ts’} has no member named ‘cframe’
        867 |     tstate->cframe->use_tracing = this->use_tracing;
            |             ^~~~~~
      src/greenlet/greenlet_greenlet.hpp:870:13: error: ‘PyThreadState’ {aka ‘struct _ts’} has no member named ‘recursion_remaining’; did you mean ‘c_recursion_remaining’?
        870 |     tstate->recursion_remaining = tstate->recursion_limit - this->recursion_depth;
            |             ^~~~~~~~~~~~~~~~~~~
            |             c_recursion_remaining
      src/greenlet/greenlet_greenlet.hpp:870:43: error: ‘PyThreadState’ {aka ‘struct _ts’} has no member named ‘recursion_limit’; did you mean ‘py_recursion_limit’?
        870 |     tstate->recursion_remaining = tstate->recursion_limit - this->recursion_depth;
            |                                           ^~~~~~~~~~~~~~~
            |                                           py_recursion_limit
      src/greenlet/greenlet_greenlet.hpp:871:13: error: ‘PyThreadState’ {aka ‘struct _ts’} has no member named ‘cframe’
        871 |     tstate->cframe->current_frame = this->current_frame;
            |             ^~~~~~
      src/greenlet/greenlet_greenlet.hpp:881:13: error: ‘PyThreadState’ {aka ‘struct _ts’} has no member named ‘trash_delete_nesting’
        881 |     tstate->trash_delete_nesting = this->trash_delete_nesting;
            |             ^~~~~~~~~~~~~~~~~~~~
      src/greenlet/greenlet_greenlet.hpp: In member function ‘void greenlet::PythonState::will_switch_from(PyThreadState*)’:
      src/greenlet/greenlet_greenlet.hpp:891:40: error: ‘PyThreadState’ {aka ‘struct _ts’} has no member named ‘cframe’
        891 |     this->use_tracing = origin_tstate->cframe->use_tracing;
            |                                        ^~~~~~
      src/greenlet/greenlet_greenlet.hpp: In member function ‘void greenlet::PythonState::set_initial_state(const PyThreadState*)’:
      src/greenlet/greenlet_greenlet.hpp:899:37: error: ‘const PyThreadState’ {aka ‘const struct _ts’} has no member named ‘recursion_limit’; did you mean ‘py_recursion_limit’?
        899 |     this->recursion_depth = tstate->recursion_limit - tstate->recursion_remaining;
            |                                     ^~~~~~~~~~~~~~~
            |                                     py_recursion_limit
      src/greenlet/greenlet_greenlet.hpp:899:63: error: ‘const PyThreadState’ {aka ‘const struct _ts’} has no member named ‘recursion_remaining’; did you mean ‘c_recursion_remaining’?
        899 |     this->recursion_depth = tstate->recursion_limit - tstate->recursion_remaining;
            |                                                               ^~~~~~~~~~~~~~~~~~~
            |                                                               c_recursion_remaining
      src/greenlet/greenlet_greenlet.hpp: At global scope:
      src/greenlet/greenlet_greenlet.hpp:928:6: error: variable or field ‘set_new_cframe’ declared void
        928 | void PythonState::set_new_cframe(_PyCFrame& frame) G_NOEXCEPT
            |      ^~~~~~~~~~~
      src/greenlet/greenlet_greenlet.hpp:928:34: error: ‘_PyCFrame’ was not declared in this scope; did you mean ‘_frame’?
        928 | void PythonState::set_new_cframe(_PyCFrame& frame) G_NOEXCEPT
            |                                  ^~~~~~~~~
            |                                  _frame
      src/greenlet/greenlet_greenlet.hpp:928:45: error: ‘frame’ was not declared in this scope; did you mean ‘_frame’?
        928 | void PythonState::set_new_cframe(_PyCFrame& frame) G_NOEXCEPT
            |                                             ^~~~~
            |                                             _frame
      src/greenlet/greenlet.cpp: In member function ‘virtual greenlet::Greenlet::switchstack_result_t greenlet::UserGreenlet::g_initialstub(void*)’:
      src/greenlet/greenlet.cpp:1251:5: error: ‘_PyCFrame’ was not declared in this scope; did you mean ‘_frame’?
       1251 |     _PyCFrame trace_info;
            |     ^~~~~~~~~
            |     _frame
      src/greenlet/greenlet.cpp:1253:39: error: ‘trace_info’ was not declared in this scope
       1253 |     this->python_state.set_new_cframe(trace_info);
            |                                       ^~~~~~~~~~
      src/greenlet/greenlet.cpp: In function ‘PyObject* mod_get_tstate_trash_delete_nesting(PyObject*)’:
      src/greenlet/greenlet.cpp:3095:36: error: ‘PyThreadState’ {aka ‘struct _ts’} has no member named ‘trash_delete_nesting’
       3095 |     return PyLong_FromLong(tstate->trash_delete_nesting);
            |                                    ^~~~~~~~~~~~~~~~~~~~
      error: command '/usr/bin/g++' failed with exit code 1
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
  ERROR: Failed building wheel for greenlet
  Building wheel for MarkupSafe (pyproject.toml): started
  Building wheel for MarkupSafe (pyproject.toml): finished with status 'done'
  Created wheel for MarkupSafe: filename=markupsafe-2.1.3-cp313-cp313-linux_x86_64.whl size=27762 sha256=623e3eed9c80a25ba56d57c1ed876897f0a7ebb1e4a8b763f76725971e4373b0
  Stored in directory: /opt/render/.cache/wheels/ea/7f/c1/89539e885f1223e3a9b36f07c5a03562bf4853712f6b8b71a2
Successfully built MarkupSafe
Failed to build greenlet
[notice] A new release of pip is available: 25.1.1 -> 26.0.1
[notice] To update, run: pip install --upgrade pip
ERROR: Failed to build installable wheels for some pyproject.toml based projects (greenlet)
==> Build failed 😞
==> Common ways to troubleshoot your deploy: https://render.com/docs/troubleshooting-deploys